# autolabel-dock

./: .gitignore  README.md  README_EN.md  main.py  pyproject.toml  requirements.txt
src/: app.py
src/controllers/: locateanything.py  model.py  project.py  script_tools.py  tags.py  train.py
src/core/: annotation.py  backup.py  class_mapping.py  config.py  label_io.py  label_store.py  model_structure.py  project.py  script_tools.py  tags.py  train_templates.py
src/engine/: dataset.py  model_manager.py  predictor.py  trainer.py
src/ui/: augmentation_preview.py  canvas.py  class_picker.py  collapsible_group.py  dialogs.py  file_list.py  icons.py  label_panel.py  locateanything_bar.py  model_panel.py  model_structure_dialog.py  properties.py  script_tool_panel.py  tag_widget.py  theme.py  train_panel.py
src/utils/: colors.py  fs.py  image.py  logging_config.py  undo.py  workers.py
tests/: conftest.py  test_app.py  test_controllers.py  test_exception_paths.py  test_tag_controller.py
tests/controllers/: test_locateanything_controller.py  test_script_runner.py
tests/core/: test_annotation.py  test_annotation_tags.py  test_backup.py  test_class_mapping.py  test_config.py  test_imagefolder_format.py  test_label_io.py  test_label_store.py  test_model_structure.py  test_project.py  test_project_task_type.py  test_script_tools.py  test_tags.py  test_train_templates.py
tests/engine/: test_dataset.py  test_dataset_classify.py  test_model_manager.py  test_predictor.py  test_predictor_classify.py  test_trainer.py
tests/integration/: test_classification_workflow.py  (+3 more)
(+53 files in other folders)
